editors/tree-sitter-quarklang/test/corpus/expressions.txt
==================
Expressions
==================

fn main(IOStream io) void {
    List<int> l = [1, 2, 3];
    int a = l[0];
    l[1] = a + 1 * 2 - 3 / 4 % 5;
    Point p = .{x: 1, y: 2};
    io.println(p.x, -a, !(a > 0), a << 1, a >= 1 && a != 2);
    pointer q = new int[4];
    memorize mb = memorize::new();
    io.println(square(41) @mb());
    io.println(math::max(1, 2));
}

---

(source_file
  (function_declaration
    (identifier)
    (parameter_list
      (parameter
        (type
          (type_base
            (builtin_type)))
        (identifier)))
    (type
      (type_base
        (builtin_type)))
    (block
      (declaration_statement
        (type
          (type_base
            (builtin_type))
          (type_arguments
            (type
              (type_base
                (builtin_type)))))
        (identifier)
        (expression
          (primary
            (list_literal
              (expression
                (primary
                  (number)))
              (expression
                (primary
                  (number)))
              (expression
                (primary
                  (number)))))))
      (declaration_statement
        (type
          (type_base
            (builtin_type)))
        (identifier)
        (expression
          (primary
            (index_expression
              (expression
                (primary
                  (identifier)))
              (expression
                (primary
                  (number)))))))
      (expression_statement
        (expression
          (assignment_expression
            (expression
              (primary
                (index_expression
                  (expression
                    (primary
                      (identifier)))
                  (expression
                    (primary
                      (number))))))
            (expression
              (binary_expression
                (expression
                  (binary_expression
                    (expression
                      (primary
                        (identifier)))
                    (expression
                      (binary_expression
                        (expression
                          (primary
                            (number)))
                        (expression
                          (primary
                            (number)))))))
                (expression
                  (binary_expression
                    (expression
                      (binary_expression
                        (expression
                          (primary
                            (number)))
                        (expression
                          (primary
                            (number)))))
                    (expression
                      (primary
                        (number))))))))))
      (declaration_statement
        (type
          (type_base
            (identifier)))
        (identifier)
        (expression
          (primary
            (struct_literal
              (struct_field
                (identifier)
                (expression
                  (primary
                    (number))))
              (struct_field
                (identifier)
                (expression
                  (primary
                    (number))))))))
      (expression_statement
        (expression
          (primary
            (call_expression
              (expression
                (primary
                  (member_expression
                    (expression
                      (primary
                        (identifier)))
                    (identifier))))
              (argument_list
                (expression
                  (primary
                    (member_expression
                      (expression
                        (primary
                          (identifier)))
                      (identifier))))
                (expression
                  (unary_expression
                    (expression
                      (primary
                        (identifier)))))
                (expression
                  (unary_expression
                    (expression
                      (primary
                        (parenthesized_expression
                          (expression
                            (binary_expression
                              (expression
                                (primary
                                  (identifier)))
                              (expression
                                (primary
                                  (number))))))))))
                (expression
                  (binary_expression
                    (expression
                      (primary
                        (identifier)))
                    (expression
                      (primary
                        (number)))))
                (expression
                  (binary_expression
                    (expression
                      (binary_expression
                        (expression
                          (primary
                            (identifier)))
                        (expression
                          (primary
                            (number)))))
                    (expression
                      (binary_expression
                        (expression
                          (primary
                            (identifier)))
                        (expression
                          (primary
                            (number))))))))))))
      (declaration_statement
        (type)
        (identifier)
        (expression
          (primary
            (new_expression
              (type
                (type_base
                  (builtin_type)))
              (expression
                (primary
                  (number)))))))
      (declaration_statement
        (type
          (type_base
            (builtin_type)))
        (identifier)
        (expression
          (primary
            (call_expression
              (expression
                (primary
                  (scope_call
                    (identifier)
                    (identifier))))
              (argument_list)))))
      (expression_statement
        (expression
          (primary
            (call_expression
              (expression
                (primary
                  (member_expression
                    (expression
                      (primary
                        (identifier)))
                    (identifier))))
              (argument_list
                (expression
                  (primary
                    (call_expression
                      (expression
                        (primary
                          (identifier)))
                      (argument_list
                        (expression
                          (primary
                            (number))))
                      (sign_call
                        (identifier)
                        (argument_list))))))))))
      (expression_statement
        (expression
          (primary
            (call_expression
              (expression
                (primary
                  (member_expression
                    (expression
                      (primary
                        (identifier)))
                    (identifier))))
              (argument_list
                (expression
                  (primary
                    (call_expression
                      (expression
                        (primary
                          (scope_call
                            (identifier)
                            (identifier))))
                      (argument_list
                        (expression
                          (primary
                            (number)))
                        (expression
                          (primary
                            (number)))))))))))))))
