editors/tree-sitter-quarklang/test/corpus/smoke.txt
==================
Minimal program
==================

fn main(IOStream io) void {
}

---

(source_file
  (function_declaration
    name: (identifier)
    parameters: (parameter_list
      (parameter
        type: (type
          (type_base
            (builtin_type)))
        name: (identifier)))
    return_type: (type
      (type_base
        (builtin_type)))
    body: (block)))
