editors/tree-sitter-quarklang/test/corpus/statements.txt
==================
Statements
==================

fn main(IOStream io) void {
    int i = 0;
    if (i > 0) {
        io.println("pos");
    } else {
        io.println("non-pos");
    }
    while (i < 3) {
        i = i + 1;
        if (i == 2) {
            break;
        }
    }
    for (int j = 0; j < 3; j = j + 1) {
        io.println(j);
    }
    List<int> l = [1, 2, 3];
    for (int v : l) {
        io.println(v);
    }
    try {
        io.println(1 / 0);
    } catch (void e) {
        io.println("caught");
    }
    log i;
    delete l;
}

---

(source_file
  (function_declaration
    (identifier)
    (parameter_list
      (parameter
        (type
          (type_base
            (builtin_type)))
        (identifier)))
    (type
      (type_base
        (builtin_type)))
    (block
      (declaration_statement
        (type
          (type_base
            (builtin_type)))
        (identifier)
        (expression
          (primary
            (number))))
      (if_statement
        (expression
          (binary_expression
            (expression
              (primary
                (identifier)))
            (expression
              (primary
                (number)))))
        (block
          (expression_statement
            (expression
              (primary
                (call_expression
                  (expression
                    (primary
                      (member_expression
                        (expression
                          (primary
                            (identifier)))
                        (identifier))))
                  (argument_list
                    (expression
                      (primary
                        (string)))))))))
        (block
          (expression_statement
            (expression
              (primary
                (call_expression
                  (expression
                    (primary
                      (member_expression
                        (expression
                          (primary
                            (identifier)))
                        (identifier))))
                  (argument_list
                    (expression
                      (primary
                        (string))))))))))
      (while_statement
        (expression
          (binary_expression
            (expression
              (primary
                (identifier)))
            (expression
              (primary
                (number)))))
        (block
          (expression_statement
            (expression
              (assignment_expression
                (expression
                  (primary
                    (identifier)))
                (expression
                  (binary_expression
                    (expression
                      (primary
                        (identifier)))
                    (expression
                      (primary
                        (number))))))))
          (if_statement
            (expression
              (binary_expression
                (expression
                  (primary
                    (identifier)))
                (expression
                  (primary
                    (number)))))
            (block
              (break_statement)))))
      (for_c_statement
        (declaration_statement
          (type
            (type_base
              (builtin_type)))
          (identifier)
          (expression
            (primary
              (number))))
        (expression
          (binary_expression
            (expression
              (primary
                (identifier)))
            (expression
              (primary
                (number)))))
        (expression
          (assignment_expression
            (expression
              (primary
                (identifier)))
            (expression
              (binary_expression
                (expression
                  (primary
                    (identifier)))
                (expression
                  (primary
                    (number)))))))
        (block
          (expression_statement
            (expression
              (primary
                (call_expression
                  (expression
                    (primary
                      (member_expression
                        (expression
                          (primary
                            (identifier)))
                        (identifier))))
                  (argument_list
                    (expression
                      (primary
                        (identifier))))))))))
      (declaration_statement
        (type
          (type_base
            (builtin_type))
          (type_arguments
            (type
              (type_base
                (builtin_type)))))
        (identifier)
        (expression
          (primary
            (list_literal
              (expression
                (primary
                  (number)))
              (expression
                (primary
                  (number)))
              (expression
                (primary
                  (number)))))))
      (for_in_statement
        (type
          (type_base
            (builtin_type)))
        (identifier)
        (expression
          (primary
            (identifier)))
        (block
          (expression_statement
            (expression
              (primary
                (call_expression
                  (expression
                    (primary
                      (member_expression
                        (expression
                          (primary
                            (identifier)))
                        (identifier))))
                  (argument_list
                    (expression
                      (primary
                        (identifier))))))))))
      (try_statement
        (block
          (expression_statement
            (expression
              (primary
                (call_expression
                  (expression
                    (primary
                      (member_expression
                        (expression
                          (primary
                            (identifier)))
                        (identifier))))
                  (argument_list
                    (expression
                      (binary_expression
                        (expression
                          (primary
                            (number)))
                        (expression
                          (primary
                            (number)))))))))))
        (type
          (type_base
            (builtin_type)))
        (identifier)
        (block
          (expression_statement
            (expression
              (primary
                (call_expression
                  (expression
                    (primary
                      (member_expression
                        (expression
                          (primary
                            (identifier)))
                        (identifier))))
                  (argument_list
                    (expression
                      (primary
                        (string))))))))))
      (log_statement
        (expression
          (primary
            (identifier))))
      (delete_statement
        (expression
          (primary
            (identifier)))))))
